src/app/shared/components/filter-item/filter-item.component.scss
.form-control label {
  color: var(--color-text-tertiary);
  font-size: var(--font-size-small);
  line-height: 20px;
  font-weight: 500;
  cursor: pointer;

  &.checked {
    color: var(--color-text-base);
  }
}

.form-control {
  justify-content: space-between;
}

.count {
  color: var(--color-text-light);
  font-size: var(--font-size-small);
  line-height: 20px;
  margin-left: 5px;

  &.checked {
    color: var(--color-text-tertiary);
  }
}

.icon {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 20px;
  height: 20px;
  padding: 1px;
  border-radius: var(--spacing-x1);
  background: var(--color-bg-light);

  &.icon--flag {
    border-radius: 50%;
  }

  i {
    font-size: var(--font-size-base);
  }

  .flag-icon {
    width: 16px;
    height: 16px;
    object-fit: cover;
  }
}

